--- a/css/help.css
+++ b/css/help.css
@@ -5,7 +5,8 @@
 
 .help-header p {
     font-size: 14px;
-    color: rgb(14, 11, 167);
+    /* color: rgb(14, 11, 167); */
+    color: var(--col-blue1);
 }
 
 .help-list-container {
